# cloudflare-ddns

./: .appveyor.yml  .clang-tidy  .editorconfig  .gitignore  .gitmodules  .lgtm.yml  .muon  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  config.ini  config.toml  config.yaml  main.cpp  mdoc_thoughts.md  meson.build  meson_options.txt
.circleci/: config.yml
.github/: FUNDING.yml
.github/codeql/: codeql-config.yaml
.github/workflows/: cmake.yaml  codacy.yaml  codeql-analysis.yaml  codeql-analysis.yml  codeql.yaml  conventional-commits.yaml  linux.yaml  meson.yaml  muon.yaml  reuse.yaml  windows.yaml
cloudflare-ddns/: CMakeLists.txt  main.cpp  meson.build
cloudflare-ddns-0.2.0/: .gitignore
cloudflare-ddns-0.2.0/.github/workflows/: meson.yaml
cloudflare-ddns-0.2.0/cloudflare-ddns/: CMakeLists.txt
cloudflare-ddns-0.2.0/debian/: README.Debian  changelog  cloudflare-ddns.timer  control  copyright  rules
debian/: README.Debian  changelog  cloudflare-ddns.service  control  copyright  watch
exe/: cloudflare-ddns.1.in  cloudflare-ddns.1.ronn.in  config.ini  config_path.hpp.in  main.cpp  meson.build  paths.hpp.in
exe/systemd/: cloudflare-ddns.service.in  cloudflare-ddns.timer
exe/sysusers.d/: cloudflare-ddns.conf
exe/tmpfiles.d/: cloudflare-ddns.conf.in
include/ddns/: cloudflare-ddns.h
include/tachi/: cloudflare-ddns.h  cloudflare-ddns.hpp
lib/: cloudflare-ddns.cpp  cloudflare-ddns.hpp  cloudflare.ddns.cpp
src/: cloudflare-ddns.1.ronn  cloudflare-ddns.service.in  cloudflare-ddns.timer  config_path.hpp.in  main.cpp  meson.build
src/sysusers.d/: cloudflare-ddns.conf
subprojects/: cpr.wrap  curl.wrap  inih.wrap  simdjson.wrap  ut.wrap
tests/: common.hpp  credentials.hpp.in  get_local_ip.cpp  get_record.cpp  local_ip.cpp  meson.build  search_zone_id.cpp  test_main.cpp  update_record.cpp
